Performance enhancments, merge migrations, fix openapi contract.
