# src/api/v1/routes/mod.rs
@@ -6,6 +6,7 @@ pub mod imports;
 pub mod namespaces;
 pub mod relations;
 pub mod reports;
+pub mod search;
 pub mod tasks;
 pub mod templates;
 pub mod users;
@@ -16,6 +17,7 @@ pub fn config(cfg: &mut web::ServiceConfig) {
         .service(web::scope("/imports").configure(imports::config))
         .service(web::scope("/namespaces").configure(namespaces::config))
         .service(web::scope("/classes").configure(classes::config))
+        .service(web::scope("/search").configure(search::config))
         .service(web::scope("/reports").configure(reports::config))
         .service(web::scope("/tasks").configure(tasks::config))
         .service(web::scope("/templates").configure(templates::config))
