# src/models/traits/object_relation.rs
@@ -7,7 +7,7 @@ use crate::errors::ApiError;
 
 use crate::models::{
     HubuumObject, HubuumObjectRelation, HubuumObjectRelationID, HubuumObjectWithPath,
-    NewHubuumObjectRelation, ObjectClosureRow,
+    NewHubuumObjectRelation, ObjectClosureRow, RelatedObjectClosureRow,
 };
 use crate::traits::accessors::{IdAccessor, InstanceAdapter};
 use crate::traits::crud::{DeleteAdapter, SaveAdapter};
@@ -99,6 +99,49 @@ impl ObjectClosureRow {
     }
 }
 
+impl RelatedObjectClosureRow {
+    pub fn to_descendant_object(&self) -> HubuumObject {
+        HubuumObject {
+            id: self.descendant_object_id,
+            name: self.descendant_name.clone(),
+            namespace_id: self.descendant_namespace_id,
+            hubuum_class_id: self.descendant_class_id,
+            data: self.descendant_data.clone(),
+            description: self.descendant_description.clone(),
+            created_at: self.descendant_created_at,
+            updated_at: self.descendant_updated_at,
+        }
+    }
+
+    pub fn to_descendant_object_with_path(&self) -> HubuumObjectWithPath {
+        HubuumObjectWithPath {
+            id: self.descendant_object_id,
+            name: self.descendant_name.clone(),
+            namespace_id: self.descendant_namespace_id,
+            hubuum_class_id: self.descendant_class_id,
+            data: self.descendant_data.clone(),
+            description: self.descendant_description.clone(),
+            created_at: self.descendant_created_at,
+            updated_at: self.descendant_updated_at,
+            path: self.path.clone(),
+        }
+    }
+
+    #[allow(dead_code)]
+    pub fn to_ascendant_object(&self) -> HubuumObject {
+        HubuumObject {
+            id: self.ancestor_object_id,
+            name: self.ancestor_name.clone(),
+            namespace_id: self.ancestor_namespace_id,
+            hubuum_class_id: self.ancestor_class_id,
+            data: self.ancestor_data.clone(),
+            description: self.ancestor_description.clone(),
+            created_at: self.ancestor_created_at,
+            updated_at: self.ancestor_updated_at,
+        }
+    }
+}
+
 // Trait for converting iterators of ObjectClosureRow to Vec<HubuumObject>
 #[allow(dead_code)]
 pub trait ToHubuumObjects {
@@ -108,6 +151,26 @@ pub trait ToHubuumObjects {
 }
 
 impl ToHubuumObjects for Vec<ObjectClosureRow> {
+    fn to_descendant_objects(self) -> Vec<HubuumObject> {
+        self.into_iter()
+            .map(|ocv| ocv.to_descendant_object())
+            .collect()
+    }
+
+    fn to_descendant_objects_with_path(self) -> Vec<HubuumObjectWithPath> {
+        self.into_iter()
+            .map(|ocv| ocv.to_descendant_object_with_path())
+            .collect()
+    }
+
+    fn to_ascendant_objects(self) -> Vec<HubuumObject> {
+        self.into_iter()
+            .map(|ocv| ocv.to_ascendant_object())
+            .collect()
+    }
+}
+
+impl ToHubuumObjects for Vec<RelatedObjectClosureRow> {
     fn to_descendant_objects(self) -> Vec<HubuumObject> {
         self.into_iter()
             .map(|ocv| ocv.to_descendant_object())
